@@ -28,6 +28,8 @@ General
   o Fixed race condition during server shutdown.
   o OSC: outgoing audio levels from the audio mixer for each audio channel is
     now transmitted (pFS and dBFS).
+  o Stage: Fixed bug where tweened transforms were only ticked when a
+    corresponding layer existed.
   o Version bump to keep up with CasparCG Client version.
 
 
